release-note/1.4.2/pt_PT.md
## [1.4.2]
### New
- A nova função de backup já está disponível, suportando backup entre disco de rede, armazenamento LAN, armazenamento USB e dispositivos ZIMA
- Ao criar espaço de armazenamento, JBOD e RAID6 agora são suportados e uma nova interface de criação de armazenamento está disponível
- No painel geral das configurações, a exibição de informações do sistema é adicionada
- As dicas são exibidas quando o aplicativo é aberto e alguns aplicativos solicitarão a senha da conta
- Apoie os certificados SSL para melhorar a segurança de acesso
### Fixed
- Corrigido o problema em que a interface ainda mostra a expansão em andamento após a conclusão da expansão
- Otimização e correções de download de aplicativos
- Proxy inteligente de alta disponibilidade: alterna e tenta automaticamente proxies de espelho transparentes sem alterar a configuração, permitindo a extração de imagem suave em diferentes ambientes de rede e melhorando significativamente a disponibilidade e baixar taxas de sucesso para usuários globais
- Processo de download de aplicativos otimizado e experiência geral de download geral
- Velocidade de download de aplicativos significativamente melhorada
- Corrigido a exibição de barra de progresso imprecisa, tornando o progresso exibir mais preciso
- Horário de inicialização do aplicativo otimizado após o reinício do dispositivo
- Mecanismo de verificação de atualização de aplicativos otimizado e melhor atualização de aplicativo Disponibilidade
- Problemas de exibição de disco fixo em diferentes dispositivos
- Consumo de recursos de índice otimizado
- Disponibilidade de funcionalidade de pesquisa de IA aprimorada
- Falhas de montagem de unidade de nuvem fixa ou problemas de exibição após a montagem
- Problema com incapacidade de desmontar unidades em nuvem
- Zimaos-HD corrigido não sendo adequadamente compartilhado após a inicialização
- Corrigido a incapacidade de selecionar novos discos rígidos nos mesmos slots de disco ao recuperar o ataque
- Corrigido o problema em que os arquivos contendo caracteres ilegais não puderam ser carregados quando o MacOS montar Zimaos via SMB.
- O mecanismo de manuseio de codificação de caracteres otimizado, agora suporta o upload normal de arquivos que contêm caracteres especiais.
### Tips
- Se você encontrar algum problema de software, seja bem -vindo para ingressar na discórdia e obter suporte de 28.000 membros da comunidade Zima
- )
